tests/lang/parse-fail-undef-var.err.exp
error: undefined variable 'y'

       at «stdin»:1:4:

            1| x: y
             |    ^
            2|
